--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,6 +4,7 @@ import { getPostOGConfig, generateBlogPostStructuredData } from '../../lib/og-im
 import { getAuthor, formatDate, formatReadingTime } from '../../lib/authors';
 import Layout from '../../layouts/Layout.astro';
 import Tag from '../../components/global/Tag';
+import { mdxComponents } from '../../components/MDXComponents';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
@@ -104,7 +105,7 @@ const structuredData = generateBlogPostStructuredData(post.data, canonicalURL.to
 
     <!-- Blog Content -->
     <article class="prose prose-lg max-w-none">
-      <Content />
+      <Content components={mdxComponents} />
     </article>
 
     <!-- Navigation -->
