feat: add blog post page with enhanced code block UI and copy functionality

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -122,6 +122,11 @@ const structuredData = generateBlogPostStructuredData(post.data, canonicalURL.to
   </main>
 </Layout>
 
+<!-- Shiki 代碼區塊增強腳本 -->
+<script>
+  import '../../scripts/shiki-enhancer.js';
+</script>
+
 <style>
   .prose :global(.not-prose) {
     all: revert;
